--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev": "2.0.0-dev"
+            "dev-master": "2.0.0-dev"
         }
     }
 }
